# hatch-pex

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  test.yml
src/hatch_pex/: builder.py  util.py
tests/: test_build.py
