[project]
name = "hatch-pex"
description = "Hatch plugin for building PEX binaries."
dependencies = ["hatchling", "pex"]
authors = [
    { name = "Kieran Geary", email = "kieran.r.geary@gmail.com" },
]

version = "0.1.0"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Framework :: Hatch"
]

[project.urls]
Homepage = "https://github.com/oh-ok/hatch-pex/"

[project.entry-points.hatch]
pex = "hatch_pex.hooks"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]


[tool.mypy]
disable_error_code = ["import-untyped"]
